istio/gd7-gateway-https.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-demo-7-api
  namespace: go-demo-7
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - go-demo-7.com
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - go-demo-7.com
