istio/gd7-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-demo-7-api
  namespace: go-demo-7
spec:
  hosts:
  - go-demo-7.com
  gateways:
  - go-demo-7-api
  http:
  - match:
    - uri:
        prefix: /demo/hello
    route:
    - destination:
        port:
          number: 8080
        host: go-demo-7-api
